--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,49 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora&family=Quicksand');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Quicksand', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.content {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-around;
+}
+.wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+header {
+  text-align: center;
+}
+
+
+.left {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+.textName {
+  font-family: 'Lora', serif;
+}
+
+.textBox {
+
+  text-align: left;
+  text-overflow: wrap;
+  font-family: 'Lora', serif;
+}
+
+p {
+  font-family: 'Lora', serif;
+  overflow: scroll;
 }
