--- a/src/index.css
+++ b/src/index.css
@@ -9,41 +9,18 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.content {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-around;
-}
 .wrapper {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-around;
 }
 
 header {
   text-align: center;
-}
-
-
-.left {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-}
-
-.textName {
-  font-family: 'Lora', serif;
-}
-
-.textBox {
-
-  text-align: left;
-  text-overflow: wrap;
-  font-family: 'Lora', serif;
+  margin-bottom: 30px;
 }
 
 p {
   font-family: 'Lora', serif;
-  overflow: scroll;
+  overflow: hidden;
 }
