--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,11 @@ p {
   font-family: 'Lora', serif;
   overflow: hidden;
 }
+
+.content-left,
+.content-right {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
