--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora&family=Quicksand');
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   font-family: 'Quicksand', 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,6 +11,17 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+}
+
+.header {
+  text-align: center;
+  border-radius: 20px;
+
+}
+
+.container {
+  text-align: center;
 }
 
 .wrapper {
@@ -15,20 +30,48 @@ body {
   justify-content: space-around;
 }
 
-header {
-  text-align: center;
-  margin-bottom: 30px;
-}
-
 p {
   font-family: 'Lora', serif;
   overflow: hidden;
 }
 
+.col {
+
+  background-color: rgb(190, 196, 219);
+
+}
+
 .content-left,
 .content-right {
-  width: 50%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
+  border-radius: 20px;
+
+}
+
+form {
+  padding: 10pxs;
+  min-width: 15rem;
+  width: 30rem;
+}
+
+.entry-box {
+
+  padding: 10px;
+  min-width: 15rem;
+  width: 30rem;
+}
+
+.edit-button {
+  margin-right: 8px;
+
+}
+
+.card-text {
+  text-align: justify;
+}
+
+.update-entry-button {
+  margin-right: 8px;
 }
