--- a/src/index.css
+++ b/src/index.css
@@ -11,13 +11,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
 }
 
 .header {
   text-align: center;
   border-radius: 20px;
-
 }
 
 .container {
@@ -35,10 +33,8 @@ p {
   overflow: hidden;
 }
 
-.col {
-
-  background-color: rgb(190, 196, 219);
-
+.content-left {
+  background-color: rgb(213, 217, 233);
 }
 
 .content-left,
@@ -46,30 +42,40 @@ p {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  border-radius: 20px;
-
+  border-radius: 6px;
 }
 
 form {
-  padding: 10pxs;
-  min-width: 15rem;
   width: 30rem;
 }
 
 .entry-box {
-
   padding: 10px;
   min-width: 15rem;
   width: 30rem;
 }
 
+.entry-flex {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
 .edit-button {
   margin-right: 8px;
-
+  text-align: center;
 }
 
 .card-text {
   text-align: justify;
+}
+
+.card-sub {
+  color: rgb(163, 163, 207);
+}
+
+h6 {
+  text-align: center;
+  font-size: 1px;
 }
 
 .update-entry-button {
