--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(0.25turn, #3f87a6, #d0e2c3, #f69d3c);
+  height: 100%;
 }
 
 .header {
   text-align: center;
-  border-radius: 20px;
 }
 
 .container {
@@ -31,10 +32,6 @@ body {
 p {
   font-family: 'Lora', serif;
   overflow: hidden;
-}
-
-.content-left {
-  background-color: rgb(213, 217, 233);
 }
 
 .content-left,
@@ -63,6 +60,12 @@ form {
 .edit-button {
   margin-right: 8px;
   text-align: center;
+
+
+}
+
+a:focus {
+  outline: none;
 }
 
 .card-text {
@@ -70,7 +73,7 @@ form {
 }
 
 .card-sub {
-  color: rgb(163, 163, 207);
+  color: rgb(156, 156, 194);
 }
 
 h6 {
